[FIX] Light-on-light text/background contrast corrected (ex: "compare" button on tiki-pagehistory.php).
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/4.x@23389 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/strasa.css
+++ b/styles/strasa.css
@@ -82,7 +82,6 @@ fieldset {
 	padding: 10px;
 }
 
-input,
 textarea,
 option,
 select,
